# api-workshop

./: main.py  pyproject.toml  requirements-dev.txt  requirements.txt  testes.py
.github/workflows/: main.yml
